# AlfredoTheClerk

./: .gitignore  README.md  ROADMAP.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
data/schemas/: styl.xsl  wyroznik.xml
data/synthetic_data/: FV2026_10_120.xml
ksef_schema/: __init__.py  kody_krajow_v10_0_e.py  schemat.py  struktury_danych_v10_0_e.py
src/: cli.py  domestic_vat_faktura_mapping.py  domestic_vat_seed.py  domestic_vat_seed_mapping.py  domestic_vat_shell_summary.py  domestic_vat_shell_validation.py  domestic_vat_xml_rendering.py
src/agentic_repair/: agent_extraction_repair.py  config.py  repair_kernel.py  repair_orchestration.py  repair_payload.py  repair_routing.py
src/input_processing/: extraction_comparison.py  extraction_diagnostics.py  invoice_text_field_extraction.py  parse.py  parse_pdf.py  populate_shell.py
src/invoice_gen/: benchmark_case.py  cli.py  comparison.py  domain_shell.py  domestic_vat_faktura_mapping.py  domestic_vat_json.py  domestic_vat_money.py  domestic_vat_seed.py  domestic_vat_seed_mapping.py  domestic_vat_shell_json.py  domestic_vat_shell_summary.py  domestic_vat_shell_validation.py  domestic_vat_xml_rendering.py  hard_case_corpus.py  macos_dyld.py  pdf_cli.py  pdf_rendering.py  template_registry.py  template_visibility.py
tests/: test_cli.py  test_domain_shell.py  test_domestic_vat_faktura_mapping.py  test_domestic_vat_seed.py  test_domestic_vat_seed_mapping.py  test_domestic_vat_shell_summary.py  test_domestic_vat_shell_validation.py  test_domestic_vat_xml_rendering.py
tests/invoice_gen/: test_cli.py  (+19 more)
(+45 files in other folders)
