[project]
name = "alfredotheclerk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "rapidfuzz>=3.0",
    "weasyprint>=68.1",
    "xsdata[cli]>=26.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
